force-app/main/default/objects/numm__Counter__c/numm__Counter__c.object-meta.xml
<CustomObject>
    <description>Objet des compteurs de pièce. Utilisé pour la numérotation des pièces par journal</description>
    <label>Compteur</label>
    <nameField>
        <displayFormat>Comp-{00000}</displayFormat>
        <label>Compteur</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Compteurs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>