force-app/main/default/objects/numm__Counter__c/fields/numm__AccountingDocument__c.field-meta.xml
<CustomField>
    <fullName>numm__AccountingDocument__c</fullName>
    <label>Numéro de pièce</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>