force-app/main/default/objects/numm__Counter__c/fields/numm__Active__c.field-meta.xml
<CustomField>
    <fullName>numm__Active__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Cocher la case pour que le journal soit utilisable</inlineHelpText>
    <label>Actif</label>
    <type>Checkbox</type>
</CustomField>