force-app/main/default/objects/numm__Counter__c/fields/numm__Code_Compteur_Externe__c.field-meta.xml
<CustomField>
    <fullName>numm__Code_Compteur_Externe__c</fullName>
    <externalId>true</externalId>
    <label>Code Compteur Externe</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>