force-app/main/default/objects/numm__Counter__c/fields/numm__IdJournal__c.field-meta.xml
<CustomField>
    <fullName>numm__IdJournal__c</fullName>
    <label>Journal</label>
    <referenceTo>numm__Journal__c</referenceTo>
    <relationshipLabel>Compteurs (Journal)</relationshipLabel>
    <relationshipName>Compteurs1</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>