force-app/main/default/objects/numm__Counter__c/fields/numm__Type_de_compteur__c.field-meta.xml
<CustomField>
    <fullName>numm__Type_de_compteur__c</fullName>
    <inlineHelpText>Définit le numéro de pièce : exemple : une pièce dont la date de pièce est le 01/01/2013 pourra être définie comme suit :
Année : 2013000001 (1 étant un chrono)
Période : 2013010001
Global :  0000000001</inlineHelpText>
    <label>Type de compteur</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Année</fullName>
            </value>
            <value>
                <fullName>Période</fullName>
            </value>
            <value>
                <fullName>Global</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>