force-app/main/default/objects/numm__Counter__c/validationRules/numm__CheckForValidNumeroDePieceFormat.validationRule-meta.xml
<ValidationRule>
    <fullName>numm__CheckForValidNumeroDePieceFormat</fullName>
    <active>true</active>
    <errorConditionFormula>LEN(numm__AccountingDocument__c) &lt;&gt; 10</errorConditionFormula>
    <errorDisplayField>numm__AccountingDocument__c</errorDisplayField>
    <errorMessage>Veuillez spécifier 10 caractères pour le numéro de pièce.
Exemples : type de compteur Année : 2013000000, type de compteur Période : 1309000000, type de compteur Global : ACH0000000</errorMessage>
</ValidationRule>